--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - go get github.com/mattn/goveralls
   - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $GOPATH/bin v1.12.3
 before_script:
-  - GO111MODULE=on golangci-lint run
+  - GO111MODULE=on golangci-lint run --disable megacheck
 script:
   - export GO111MODULE=on
   - if [[ "$TRAVIS_GO_VERSION" == 1.11.* ]]; then /bin/bash ./.scripts/cover.sh; else go test -v -race -tags integration ./...; fi
