Matcher: added empty, not_empty, contains, has_prefix, has_suffix operators HTTP Connector: added http_path field Slack connector: support for different message subtypes

--- a/examples/dialog/1_connectors.yaml
+++ b/examples/dialog/1_connectors.yaml
@@ -4,9 +4,9 @@ connectors:
     config:
       debug: false
       token: *slack_token
-      channels: *slack_channels
       bot_icon_url:
       bot_icon_emoji: *slack_bot_icon
+      message_types:
   http:
     type: http
   cli:
