Slack connector: error handling

--- a/examples/dialog/0_values.yaml
+++ b/examples/dialog/0_values.yaml
@@ -2,6 +2,6 @@ shutdown_timeout: 10 #time to let sequencer finish running sequences
 var: # var will not be parsed, its just to consolidate variables for manifest
   slack_token: &slack_token ""
   slack_verification_token: &slack_verification_token ""
-  slack_channels: &slack_channels
-    - "test-bot"
+  slack_channel: &slack_channels ""
+  slack_user: &slack_user ""
   slack_bot_icon: &slack_bot_icon ":gun:"
