--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ services:
 install:
   - export GO111MODULE=on
   - go get github.com/mattn/goveralls
-  - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $GOPATH/bin v1.12.5
+  - go get -u github.com/mgechev/revive
 before_script:
-  - GO111MODULE=on golangci-lint run --disable megacheck
+  - GO111MODULE=on revive -formatter friendly ./...
 script:
   - export GO111MODULE=on
   - if [[ "$TRAVIS_GO_VERSION" == 1.11.* ]]; then /bin/bash ./.scripts/cover.sh; else go test -v -race -tags integration ./...; fi
